# weather-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  version-bump.yml
src/weather/: main.py
tests/: test_weather.py
